# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Capture the key facts and context needed for future reference in a concise observation."
      INSTRUCTION_QUERY = "Formulate a clear, specific question about the stored knowledge that can be answered directly."
      INSTRUCTION_RESPONSE = "Provide a focused, helpful response based on the knowledge base contents, keeping replies brief."
      
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.log(f"Stored: {observation.raw[:80]}")
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_OBSERVATION = "Extract the key insight from the user input and store it in the knowledge base."
      INSTRUCTION_QUERY = "Formulate a query to find relevant knowledge base entries that answer the user's question."
      INSTRUCTION_RESPONSE = "Provide a concise response based on the retrieved knowledge without adding new speculation."
      
      
      def process_text(text: str) -> str:
          return text.strip()
      
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              processed = process_text(observation.raw)
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'Green apple',
  })
# ---
# name: test_observation_generation
  dict({
    'output': '{"raw":"The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create an Observation object to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The Observation must conform to this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_observation_with_feedback
  dict({
    'output': '{"raw":"Evaluation feedback: correct answer should be Paris."}',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate an observation to write into memory.
      
      The observation must be a JSON object matching this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_patch_generation_compile_fix
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_OBSERVATION = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored.")
  
    ''',
    'output': '''
      *** Begin Patch
      *** Update File: program.py
      @@
      -        return "\n".join(self.store[:5] if self.store else "No information stored."
      +        return "\n".join(self.store[:5] if self.store else "No information stored.")
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
      Fix the error and output your fix as a patch.
      
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Three module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      
      These are inserted into the task agent prompts as the main directive sentence. They must not be empty.
      
      
      Rules:
      1. Output ONLY the fix as a patch. No explanation needed.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and three module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE).
      3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
      4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
      
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      
      ## Broken Code
      
      ```python
      from dataclasses import dataclass
      
      INSTRUCTION_OBSERVATION = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored."
      
      ```
      
      ## Error
      
      **Syntax error**: '(' was never closed (<unknown>, line 28)
      
      Fix the error and output your fix as a patch.
    ''',
  })
# ---
# name: test_patch_generation_reflection
  dict({
    'output': '''
      Diagnosis:
      - The current memory schema just stores raw text and read() blindly returns everything, so there’s no structured way to link “Alice” to “favorite color.” The LLM never sees facts with explicit subject/predicate/value, so even though “Alice’s favorite color is blue” might be written, the query “What is Alice’s favorite color?” can’t match it. 
      - There’s no filtering in read(), so the assistant either gets overwhelmed by the whole store or returns nothing useful; we need a targeted retrieval strategy.
      - The instructions do not describe how to populate structured observations or queries, so the LLM doesn’t know what JSON to emit.
      
      Fixes:
      - Define Observation with explicit subject/predicate/value/source fields and Query with optional subject/predicate/detail fields, accompanied by descriptive instructions so the LLM emits the expected JSON.
      - Store facts in an SQLite table to enable constrained, structured writes and reads.
      - Implement read() to filter via LIKE clauses, limit results, and truncate the response to ≤1000 characters, with thorough logging and comments explaining design choices.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +from dataclasses import dataclass, field
      +from typing import Optional
       
      -INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      +INSTRUCTION_OBSERVATION = (
      +    "Extract a single factual statement from the input and describe it with subject, predicate, value, "
      +    "and an optional source for provenance. Provide the result as JSON matching the Observation schema."
      +)
      +INSTRUCTION_QUERY = (
      +    "Interpret the question and produce the most relevant retrieval hints using the Query schema, "
      +    "focusing on subject, predicate, and optional detail keywords that would help narrow the search."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Answer succinctly using the retrieved facts. Mention the most relevant fact and cite its source when possible; "
      +    "if no fact matches, reply with 'I don't know'. Keep the answer concise and under 1000 characters."
      +)
       
       
       @dataclass
       class Observation:
      -    """Raw text observation to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +    """Structured fact stored in the knowledge base for reliable retrieval."""
      +    subject: str = field(
      +        metadata={"description": "The primary entity, person, or thing described by this fact."}
      +    )
      +    predicate: str = field(
      +        metadata={"description": "The relationship or attribute connecting the subject to the value."}
      +    )
      +    value: str = field(metadata={"description": "The object, detail, or answer that completes the fact."})
      +    source: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Optional provenance such as document title or timestamp."},
      +    )
       
       
       @dataclass
       class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +    """Structured hints used to filter stored observations when answering questions."""
      +    subject: Optional[str] = field(
      +        default=None, metadata={"description": "The main entity or topic to look up."}
      +    )
      +    predicate: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "A specific attribute, relationship, or question focus to filter by."},
      +    )
      +    detail: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Additional keywords that might appear in the observation value."},
      +    )
       
       
       class KnowledgeBase:
           """Simple append-all / return-all knowledge base."""
       
           def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      +        self.toolkit = toolkit
      +        self.db = toolkit.db
      +        # Create a lightweight facts table so we can filter by subject/predicate/value quickly.
      +        self.db.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS facts (
      +                subject TEXT NOT NULL,
      +                predicate TEXT NOT NULL,
      +                value TEXT NOT NULL,
      +                source TEXT
      +            )
      +            """
      +        )
      +        # Logging here helps trace whether initialization succeeded during diagnosis.
      +        self.toolkit.logger.debug("KnowledgeBase initialized with facts table.")
       
           def write(self, observation: Observation) -> None:
      -        self.store.append(observation.raw)
      -        self.toolkit.logger.debug(f"Stored: {observation.raw}")
      +        # Persist each structured fact immediately to keep the database in sync with writes.
      +        with self.db:
      +            self.db.execute(
      +                "INSERT INTO facts (subject, predicate, value, source) VALUES (?, ?, ?, ?)",
      +                (observation.subject, observation.predicate, observation.value, observation.source),
      +            )
      +        self.toolkit.logger.debug(
      +            "Stored fact",
      +            extra={
      +                "subject": observation.subject,
      +                "predicate": observation.predicate,
      +                "value": observation.value,
      +                "source": observation.source,
      +            },
      +        )
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +        # Build WHERE clauses that respect the structured Query fields so we return targeted facts.
      +        filters = []
      +        params = []
      +        if query.subject:
      +            filters.append("subject LIKE ?")
      +            params.append(f"%{query.subject}%")
      +        if query.predicate:
      +            filters.append("predicate LIKE ?")
      +            params.append(f"%{query.predicate}%")
      +        if query.detail:
      +            filters.append("value LIKE ?")
      +            params.append(f"%{query.detail}%")
      +        sql = "SELECT subject, predicate, value, source FROM facts"
      +        if filters:
      +            sql += " WHERE " + " AND ".join(filters)
      +        sql += " ORDER BY rowid DESC LIMIT 8"
      +        rows = self.db.execute(sql, params).fetchall()
      +        if not rows:
      +            self.toolkit.logger.debug("Query returned no matching facts", extra={"query": query})
      +            return "No matching facts found."
      +
      +        lines = []
      +        for subject, predicate, value, source in rows:
      +            line = f"{subject} {predicate} {value}"
      +            if source:
      +                line += f" (source: {source})"
      +            lines.append(line)
      +        result = "\n".join(lines)
      +        if len(result) > 1000:
      +            result = result[:997] + "..."
      +        self.toolkit.logger.debug(
      +            "Query result prepared",
      +            extra={"query": query, "result_length": len(result)},
      +        )
      +        return result
      *** End Patch
    ''',
    'patched_code': '''
      from dataclasses import dataclass, field
      from typing import Optional
      
      INSTRUCTION_OBSERVATION = (
          "Extract a single factual statement from the input and describe it with subject, predicate, value, "
          "and an optional source for provenance. Provide the result as JSON matching the Observation schema."
      )
      INSTRUCTION_QUERY = (
          "Interpret the question and produce the most relevant retrieval hints using the Query schema, "
          "focusing on subject, predicate, and optional detail keywords that would help narrow the search."
      )
      INSTRUCTION_RESPONSE = (
          "Answer succinctly using the retrieved facts. Mention the most relevant fact and cite its source when possible; "
          "if no fact matches, reply with 'I don't know'. Keep the answer concise and under 1000 characters."
      )
      
      
      @dataclass
      class Observation:
          """Structured fact stored in the knowledge base for reliable retrieval."""
          subject: str = field(
              metadata={"description": "The primary entity, person, or thing described by this fact."}
          )
          predicate: str = field(
              metadata={"description": "The relationship or attribute connecting the subject to the value."}
          )
          value: str = field(metadata={"description": "The object, detail, or answer that completes the fact."})
          source: Optional[str] = field(
              default=None,
              metadata={"description": "Optional provenance such as document title or timestamp."},
          )
      
      
      @dataclass
      class Query:
          """Structured hints used to filter stored observations when answering questions."""
          subject: Optional[str] = field(
              default=None, metadata={"description": "The main entity or topic to look up."}
          )
          predicate: Optional[str] = field(
              default=None,
              metadata={"description": "A specific attribute, relationship, or question focus to filter by."},
          )
          detail: Optional[str] = field(
              default=None,
              metadata={"description": "Additional keywords that might appear in the observation value."},
          )
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.db = toolkit.db
              # Create a lightweight facts table so we can filter by subject/predicate/value quickly.
              self.db.execute(
                  """
                  CREATE TABLE IF NOT EXISTS facts (
                      subject TEXT NOT NULL,
                      predicate TEXT NOT NULL,
                      value TEXT NOT NULL,
                      source TEXT
                  )
                  """
              )
              # Logging here helps trace whether initialization succeeded during diagnosis.
              self.toolkit.logger.debug("KnowledgeBase initialized with facts table.")
      
          def write(self, observation: Observation) -> None:
              # Persist each structured fact immediately to keep the database in sync with writes.
              with self.db:
                  self.db.execute(
                      "INSERT INTO facts (subject, predicate, value, source) VALUES (?, ?, ?, ?)",
                      (observation.subject, observation.predicate, observation.value, observation.source),
                  )
              self.toolkit.logger.debug(
                  "Stored fact",
                  extra={
                      "subject": observation.subject,
                      "predicate": observation.predicate,
                      "value": observation.value,
                      "source": observation.source,
                  },
              )
      
          def read(self, query: Query) -> str:
              # Build WHERE clauses that respect the structured Query fields so we return targeted facts.
              filters = []
              params = []
              if query.subject:
                  filters.append("subject LIKE ?")
                  params.append(f"%{query.subject}%")
              if query.predicate:
                  filters.append("predicate LIKE ?")
                  params.append(f"%{query.predicate}%")
              if query.detail:
                  filters.append("value LIKE ?")
                  params.append(f"%{query.detail}%")
              sql = "SELECT subject, predicate, value, source FROM facts"
              if filters:
                  sql += " WHERE " + " AND ".join(filters)
              sql += " ORDER BY rowid DESC LIMIT 8"
              rows = self.db.execute(sql, params).fetchall()
              if not rows:
                  self.toolkit.logger.debug("Query returned no matching facts", extra={"query": query})
                  return "No matching facts found."
      
              lines = []
              for subject, predicate, value, source in rows:
                  line = f"{subject} {predicate} {value}"
                  if source:
                      line += f" (source: {source})"
                  lines.append(line)
              result = "\n".join(lines)
              if len(result) > 1000:
                  result = result[:997] + "..."
              self.toolkit.logger.debug(
                  "Query result prepared",
                  extra={"query": query, "result_length": len(result)},
              )
              return result
  
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining Observation, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Three module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      
      These are inserted into the task agent prompts as the main directive sentence. They must not be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and three module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE to steer the task LLM's output format.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.200</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is Alice's favorite color?</question>
      <expected>blue</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is Alice's favorite color?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '{"raw":"capital of France"}',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis:
      The knowledge base currently just appends raw text and returns everything it stores, so queries never match anything (e.g., “capital of France” can’t find “Paris” in the jumble) and there’s no structured way for the read path to prioritize relevant facts. Also, the instruction constants are generic, making it hard for agents to consistently structure observations and queries. To fix this, the KB needs structured schema for observations/queries, SQL-backed storage for fast filtering, keyword matching in `read()`, and clearer instructions so the agents know what data to provide. I also ensured the `read()` response stays under 1000 characters by truncating output and building the answer incrementally.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +import json
      +from dataclasses import dataclass, field
       
      -INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      +INSTRUCTION_OBSERVATION = (
      +    "Extract a concise title, detailed content, and optional tags from the text so the knowledge base can store the "
      +    "key facts needed later."
      +)
      +INSTRUCTION_QUERY = (
      +    "Convert the user request into a list of keywords and an optional limit so the knowledge base can find the "
      +    "most relevant stored facts."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Using only the retrieved knowledge, answer the user query with up to three concise bullet points and no extra "
      +    "explanation."
      +)
       
       
       @dataclass
       class Observation:
      -    """Raw text observation to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +    """Structured knowledge captured for later retrieval."""
      +    title: str = field(metadata={"description": "Short identifier for this observation."})
      +    content: str = field(metadata={"description": "The detailed content to remember."})
      +    tags: list[str] = field(default_factory=list, metadata={"description": "Optional tags for filtering."})
       
       
       @dataclass
       class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +    """Structured query parameters to find matching knowledge."""
      +    keywords: list[str] = field(
      +        metadata={"description": "Keywords that should be matched against titles, content, or tags."}
      +    )
      +    max_results: int = field(
      +        default=3,
      +        metadata={"description": "Maximum number of matching entries to return (capped at three)."},
      +    )
       
       
       class KnowledgeBase:
           """Simple append-all / return-all knowledge base."""
       
           def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      +        self.toolkit = toolkit
      +        # Persist observations in SQLite so we can filter quickly instead of returning everything.
      +        self.conn = self.toolkit.db
      +        self.conn.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS entries (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                title TEXT NOT NULL,
      +                content TEXT NOT NULL,
      +                tags TEXT NOT NULL
      +            )
      +            """
      +        )
       
           def write(self, observation: Observation) -> None:
      -        self.store.append(observation.raw)
      -        self.toolkit.logger.debug(f"Stored: {observation.raw}")
      +        # Store the observation fields as JSON so tags can be matched later.
      +        tags_json = json.dumps(observation.tags)
      +        self.conn.execute(
      +            "INSERT INTO entries (title, content, tags) VALUES (?, ?, ?)",
      +            (observation.title.strip(), observation.content.strip(), tags_json),
      +        )
      +        self.conn.commit()
      +        self.toolkit.logger.debug(f"Stored observation titled '{observation.title}'.")
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +        self.toolkit.logger.debug(
      +            f"Executing read with keywords={query.keywords}, max_results={query.max_results}"
      +        )
      +        keywords = [kw.strip() for kw in query.keywords if kw.strip()]
      +        if not keywords:
      +            return "No matching knowledge found for the provided keywords."
      +
      +        where_clauses = []
      +        params = []
      +        for keyword in keywords:
      +            like_pattern = f"%{keyword}%"
      +            params.extend([like_pattern, like_pattern, like_pattern])
      +            where_clauses.append("(title LIKE ? COLLATE NOCASE OR content LIKE ? COLLATE NOCASE OR tags LIKE ? COLLATE NOCASE)")
      +
      +        sql = "SELECT title, content FROM entries WHERE " + " AND ".join(where_clauses)
      +        sql += " ORDER BY id DESC LIMIT ?"
      +        params.append(min(max(1, query.max_results), 3))
      +
      +        cursor = self.conn.execute(sql, params)
      +        response = ""
      +        for idx, (title, content) in enumerate(cursor, start=1):
      +            # Truncate long content to keep outputs within budget.
      +            trimmed_content = content.strip()
      +            if len(trimmed_content) > 300:
      +                trimmed_content = trimmed_content[:297] + "..."
      +
      +            entry_text = f"{idx}. {title}\n{trimmed_content}\n"
      +            if len(response) + len(entry_text) > 1000:
      +                self.toolkit.logger.debug("Read output truncated to respect 1000 character limit.")
      +                break
      +            response += entry_text
      +
      +        if not response:
      +            return "No matching knowledge found for the provided keywords."
      +
      +        return response.strip()
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining Observation, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Three module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      
      These are inserted into the task agent prompts as the main directive sentence. They must not be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and three module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE to steer the task LLM's output format.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      from dataclasses import dataclass, field
      import re
      
      # These instructions are consumed by upstream task agents.
      # Keep them short, explicit, and non-empty so the LLM reliably produces useful JSON.
      INSTRUCTION_OBSERVATION = (
          "Extract concrete, self-contained facts from the source text. "
          "Preserve exact names, identifiers, codes, and numbers verbatim."
      )
      INSTRUCTION_QUERY = (
          "Write a focused retrieval query using the key entities and requested fact."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using only retrieved memory. Be concise and include exact values when present."
      )
      
      
      @dataclass
      class Observation:
          """Single memory item to store."""
          raw: str = field(
              metadata={
                  "description": "A standalone factual statement to store verbatim."
              }
          )
      
      
      @dataclass
      class Query:
          """Text query used to retrieve relevant memories."""
          raw: str = field(
              metadata={
                  "description": "Natural-language question or lookup text for retrieval."
              }
          )
      
      
      class KnowledgeBase:
          """Simple lexical-memory KB.
      
          Design goal: deterministic, fast retrieval with no LLM calls in write/read.
          This avoids budget/latency issues and is robust for exact-fact Q&A.
          """
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
              self._debug("KnowledgeBase initialized.")
      
          def _debug(self, message: str) -> None:
              """Best-effort debug logging.
      
              WHY: Interface promises logger.debug(), but a safe fallback prevents
              accidental runtime failures if a different logger shape is provided.
              """
              logger = getattr(self.toolkit, "logger", None)
              if logger is None:
                  return
              if hasattr(logger, "debug"):
                  logger.debug(message)
              elif hasattr(logger, "log"):
                  logger.log(message)
      
          def _tokens(self, text: str) -> set[str]:
              """Normalize text for lightweight lexical scoring."""
              return set(re.findall(r"[a-z0-9]+", (text or "").lower()))
      
          def write(self, observation: Observation) -> None:
              # WHY: ignore empty writes to keep memory cleaner and retrieval sharper.
              text = (observation.raw or "").strip()
              if not text:
                  self._debug("Skipped empty observation.")
                  return
              self.store.append(text)
              self._debug(f"Stored observation #{len(self.store)}: {text[:120]}")
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self._debug(f"Read query: {q[:120]} | store size={len(self.store)}")
              if not self.store:
                  return "No information stored."
      
              q_tokens = self._tokens(q)
              scored: list[tuple[int, int, str]] = []
              q_lower = q.lower()
      
              # WHY: token overlap is cheap and effective for factual lookup; we also
              # add a substring bonus for near-exact matches.
              for idx, item in enumerate(self.store):
                  item_tokens = self._tokens(item)
                  overlap = len(q_tokens & item_tokens)
                  bonus = 3 if q_lower and q_lower in item.lower() else 0
                  score = overlap + bonus
                  if score > 0:
                      scored.append((score, idx, item))
      
              if not scored:
                  # WHY: if lexical match fails, return recent context rather than
                  # claiming empty memory; this still gives the answering model signal.
                  fallback = self.store[-3:]
                  result = "\n".join(f"- {x}" for x in fallback)
                  return result[:1000]
      
              # Higher score first; for ties prefer newer entries.
              scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
              top_items = [item for _, _, item in scored[:3]]
              result = "\n".join(f"- {x}" for x in top_items)
              return result[:1000]
  
    ''',
    'round1_score': 0.0,
    'round2_output': 'Project Zephyr’s access code is DELTA-7742.',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '{"raw":"capital of France"}',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Extract concise factual statements from the user's input that matter to the task."
      INSTRUCTION_QUERY = "Generate a focused query describing the knowledge you need retrieved from the base."
      INSTRUCTION_RESPONSE = "Answer clearly and briefly, referencing only stored knowledge."
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "Raw textual observation describing the user's input."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Raw textual query representing what to retrieve."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              if not self.store:
                  return ""
              response = " ".join(self.store[-5:])
              return response[:1000]
  
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
